--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,9 @@ repositories {
 	mavenCentral()
 }
 
-
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter-data-mongodb')
-	testCompile('org.springframework.boot:spring-boot-starter-test')
+    compile('org.springframework.boot:spring-boot-starter-data-mongodb')
+    testCompile('org.springframework.boot:spring-boot-starter-test')
+    compile("me.ramswaroop.jbot:jbot:3.0.2")
+    compile'com.google.code.gson:gson:2.8.2'
 }
